<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/container"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:id="@+id/refresh"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recycler_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clipToPadding="false"
				android:padding="@dimen/offset_small"
				android:scrollbarStyle="outsideOverlay"
				android:scrollbars="vertical" />

		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

		<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|bottom"
			android:layout_margin="16dp"
			android:src="@drawable/ic_arrow_drop_up_white_24dp" />

		<four.pda.ui.SupportView_
			android:id="@+id/support_view"
			style="@style/SupportView"/>

	</FrameLayout>

</LinearLayout>
