...
				android:textColor="@color/white"
				android:textSize="@dimen/profile_login_size" />

		</LinearLayout>

		<TextView
			android:id="@+id/all_category_view"
			style="@style/CategoryItem"
			android:layout_marginTop="@dimen/offset_big"
			android:text="@string/category_all" />

		<TextView
			android:id="@+id/news_category_view"
...
		<TextView
			android:id="@+id/software_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_software" />

		<TextView
			android:id="@+id/games_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_games" />

		<View
			android:layout_width="wrap_content"
			android:layout_height="0dp"
...
