...
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_anchor="@id/scroll_view"
			app:layout_anchorGravity="bottom|right|end">

			<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/comments_button"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_margin="@dimen/offset_normal"
				app:elevation="10dp" />

			<TextView
...
